# src/controllers/auth.controller.ts
@@ -92,7 +92,9 @@ export default {
     try {
       const userByIdentifier = await UserModel.findOne({
         $or: [{ email: identifier }, { username: identifier }],
+        isActive: true,
       });
+      console.log("user :", userByIdentifier);
 
       if (!userByIdentifier) {
         return res.status(403).json({
@@ -141,6 +143,41 @@ export default {
       res.status(200).json({
         message: "success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: '#/components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+
+      res.status(200).json({
+        message: "User successfully activated",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
